--- a/client/src/style/_typography.scss
+++ b/client/src/style/_typography.scss
@@ -44,7 +44,7 @@
 /* Utility classes */
 
 .typography-base {
-  font-family: $font-family-primary;
+  font-family: $primary-font-family;
   color: $black-color;
 }
 
