--- a/client/src/style/_mixins.scss
+++ b/client/src/style/_mixins.scss
@@ -1,12 +1,15 @@
+@import 'colors.scss';
+@import 'variables.scss';
+
 @mixin base-wrapper($border-radius: 10px) {
   background-color: $white-color;
   border-radius: $border-radius;
-  box-shadow: 0px 3px 8px $black-shadow-color;
+  box-shadow: $outer-shadow;
 }
 
-@mixin smooth-transition($transition-property) {
-  transition-property: $transition-property;
-  transition-duration: 0.2s;
+@mixin smooth-transition($transition-duration: 0.2s) {
+  transition-property: all;
+  transition-duration: $transition-duration;
   transition-timing-function: ease;
 }
 
