--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: $primary-font-family;
 }
 
 a {
@@ -19,6 +20,6 @@ img {
 }
 
 body {
-  background-color: $background-color;
+  background: $background-color;
   overflow-y: scroll;
 }
