--- a/client/src/components/Navbar/Navbar.module.scss
+++ b/client/src/components/Navbar/Navbar.module.scss
@@ -1,12 +1,91 @@
 @import '~style/variables';
 @import '~style/mixins';
+@import '~style/colors';
+@import '~style/typography';
 
 .aside {
   position: sticky;
   top: 30px;
 
   @include base-wrapper();
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+
   min-width: $nav-container-max-width;
   height: max-content;
   margin-left: 30px;
+}
+
+.userProfile {
+  @include base-wrapper();
+  display: flex;
+  align-items: center;
+  column-gap: 12px;
+  width: 100%;
+  padding: 10px;
+
+  overflow-wrap: anywhere;
+}
+
+.userPhoto {
+  width: 50px;
+  height: 50px;
+  min-width: 50px;
+  min-height: 50px;
+
+  border-radius: 8px;
+
+  object-fit: cover;
+}
+
+.userInfo {
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+}
+
+.userName {
+  font-family: $primary-font-family;
+  font-weight: 600;
+  font-size: 13px;
+
+  color: $black-color;
+}
+
+.userCity {
+  display: flex;
+  align-items: center;
+  column-gap: 5px;
+
+  font-family: $primary-font-family;
+  font-weight: 400;
+  font-size: 12px;
+
+  color: $black-color;
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  &Item {
+    display: flex;
+    align-items: center;
+    column-gap: 12px;
+    padding: 12px 10px;
+
+    @extend .navigation-typography;
+
+    border-radius: 8px;
+
+    &:hover,
+    &.active {
+      background: $light-gray-color;
+    }
+  }
 }
