--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -11,6 +11,11 @@
   font-family: $primary-font-family;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+  padding: 0;
+}
+
 a {
   text-decoration: none;
 }
