--- a/client/src/pages/ErrorFallback/ErrorFallback.module.scss
+++ b/client/src/pages/ErrorFallback/ErrorFallback.module.scss
@@ -1,6 +1,8 @@
 @import '~style/typography';
+@import '~style/mixins';
 
 .wrapper {
+  @include base-wrapper();
   display: flex;
   flex-direction: column;
   align-items: flex-start;
