--- a/client/src/style/_mixins.scss
+++ b/client/src/style/_mixins.scss
@@ -5,8 +5,7 @@
   background-color: $white-color;
   border-radius: $border-radius;
   box-shadow: $outer-shadow;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding: 40px;
 }
 
 @mixin smooth-transition($transition-duration: 0.2s) {
