--- a/client/src/components/InputField/InputField.module.scss
+++ b/client/src/components/InputField/InputField.module.scss
@@ -7,12 +7,12 @@
   box-sizing: border-box;
   width: 100%;
   min-height: 40px;
-  padding: 12px;
+  padding: 0 12px;
 
-  border: 1px solid $dark-gray-color;
+  border: 1px solid $blue-color;
   border-radius: 4px;
   outline: none;
-  background-color: $light-gray-color;
+  background-color: $white-color;
 
   @include smooth-transition();
 
@@ -21,15 +21,17 @@
   font-size: 13px;
 
   &::placeholder {
-    color: $dark-gray-color;
+    font-weight: 300;
+    color: $black-color;
   }
 
   &:hover {
-    background-color: $light-gray-color;
+    border: 1px solid $blue-color;
+    box-shadow: $outer-button-shadow;
   }
 
   &:focus {
-    border: 2px solid $blue-color;
+    border: 1px solid $blue-color;
 
     &::placeholder {
       color: $dark-gray-color;
@@ -38,11 +40,11 @@
 }
 
 .error {
-  border: 2px solid $red-color;
+  border: 1px solid $red-color;
 }
 
 .success {
-  border: 2px solid $green-color;
+  border: 1px solid $green-color;
 }
 
 .inputLabel {
