--- a/client/src/components/DateTimePicker/DateTimePicker.scss
+++ b/client/src/components/DateTimePicker/DateTimePicker.scss
@@ -194,6 +194,10 @@
     border-radius: 4px !important;
     color: $black-color;
 
+    &--disabled {
+      opacity: 0.6;
+    }
+
     &--outside-month {
       opacity: 0.2;
     }
