Fix modal style

--- a/client/src/components/Button/Button.module.scss
+++ b/client/src/components/Button/Button.module.scss
@@ -16,6 +16,11 @@
   @include smooth-transition();
   cursor: pointer;
 
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+
   &.primary {
     background: $blue-gradient-color;
     color: $white-color;
