--- a/client/src/components/InputLabel/InputLabel.module.scss
+++ b/client/src/components/InputLabel/InputLabel.module.scss
@@ -5,8 +5,8 @@
   display: block;
 
   font-family: $primary-font-family;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 12px;
 
-  color: $dark-gray-color;
+  color: $black-color;
 }
