--- a/client/src/components/InputField/InputField.module.scss
+++ b/client/src/components/InputField/InputField.module.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   width: 100%;
   min-height: 40px;
-  padding: 0 12px;
+  padding: 12px;
 
   border: 1px solid $blue-color;
   border-radius: 4px;
