--- a/client/src/components/InputField/InputField.module.scss
+++ b/client/src/components/InputField/InputField.module.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   width: 100%;
   min-height: 40px;
-  padding: 12px;
+  padding: 0 12px;
 
   border: 1px solid $blue-color;
   border-radius: 4px;
@@ -43,9 +43,9 @@
   border: 1px solid $red-color;
 }
 
-.success {
-  border: 1px solid $green-color;
-}
+// .success {
+//   border: 1px solid $green-color;
+// }
 
 .inputLabel {
   margin-bottom: 8px;
