--- a/client/src/forms/InviteForm/InviteForm.module.scss
+++ b/client/src/forms/InviteForm/InviteForm.module.scss
@@ -1,11 +1,29 @@
+@import '~style/colors';
+
 .wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   column-gap: 25px;
 }
 
 .dateWrapper {
-  [class*=react-datepicker-wrapper] {
-    width: 13em;
+  display: flex;
+  column-gap: 20px;
+}
+
+.clearButton {
+  margin-top: 15px;
+
+  font-size: 12px;
+  font-weight: 300;
+
+  border: none;
+  background: none;
+  color: $red-color;
+
+  &:hover {
+    text-decoration: underline;
+    cursor: pointer;
   }
 }
