--- a/client/src/components/Select/Select.module.scss
+++ b/client/src/components/Select/Select.module.scss
@@ -1,7 +1,7 @@
 @import '~style/colors';
 @import '~style/typography';
 
-.multiSelect {
+.select {
   padding: 0;
   height: auto;
   min-height: 40px;
