--- a/client/src/components/TextArea/TextArea.module.scss
+++ b/client/src/components/TextArea/TextArea.module.scss
@@ -11,7 +11,7 @@
     resize: none;
     overflow: hidden;
     height: inherit;
-    padding-bottom: 30px;
+    padding: 12px;
   }
 }
 
@@ -21,11 +21,11 @@
   bottom: 13px;
 
   font-family: $primary-font-family;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 12px;
-  color: $dark-gray-color;
+  color: #a9a9a9;
 
   .letterCount {
-    font-weight: 500;
+    font-weight: 300;
   }
 }
