--- a/client/src/components/DateTimePicker/DateTimePicker.scss
+++ b/client/src/components/DateTimePicker/DateTimePicker.scss
@@ -53,6 +53,10 @@
       background-image: url('../../assets/images/calendar.svg');
       background-repeat: no-repeat;
       background-position: top 9px right 11px;
+
+      &[name='time'] {
+        background-image: url('../../assets/images/watches.svg');
+      }
     }
   }
 
