--- a/client/src/pages/LoginPage/LoginPage.module.scss
+++ b/client/src/pages/LoginPage/LoginPage.module.scss
@@ -2,72 +2,88 @@
 @import '~style/typography';
 @import '~style/mixins';
 
-
 .loginSection {
+  display: flex;
   height: 100vh;
-  background: $background-color;
-  padding: 60px 0;
 }
 
-.container {
-  height: 100%;
-  max-width: 1100px;
-  width: 90%;
+.header {  
+  display: flex;
+  flex-direction: column;
+  width: 58%;
+  padding: 120px 70px 0 70px;
+
+  background: $blue-gradient-color;
+}
+
+.logoWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 25px;
+  margin-bottom: 60px;
+
+  font-weight: 500;
+  font-size: 20px;
+
+  color: $white-color;
+}
+
+.promoImages {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 120px;
+
+  & img {
+    width: 200px;
+    height: 200px;
+
+    border-radius: 18px;
+  }
+}
+
+.promoImage {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  margin: 0px auto;
-
-  @media (max-width: 900px) {
-    flex-direction: column;
-    justify-content: flex-start;
-    row-gap: 60px;
-  }
-}
-
-.logo {
-  width: clamp(180px, 28%, 300px);
-}
-
-.formWrapper {
-  width: 46%;
-  max-width: 600px;
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-  box-sizing: border-box;
-  padding: 40px 70px;
-
-  border-radius: 10px;
-  background-color: $white-color;
-
-  @media (max-width: 900px) {
-    width: 100%;
-  }
-
-  @media (max-width: 550px) {
-    padding: 40px;
-  }
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
   row-gap: 15px;
+  padding: 10px 10px 20px 10px;
+  
+  font-weight: 500;
+  font-size: 14px;
+  
+  border-radius: 20px;
+  background: $white-color;
+  color: $black-color;
+}
 
-  &Actions {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap-reverse;
-    row-gap: 10px;
-    margin-top: 10px;
+.promoButton { 
+  display: flex;
+  align-items: center;
+  align-self: center;
+  column-gap: 10px;
+  padding: 10px 15px;
+
+  font-weight: 600;
+  font-size: 11px;
+
+  background: $white-color;
+  border-radius: 10px;
+  border: none;
+  color: $black-color;
+
+  cursor: pointer;
+
+  &:hover {
+    @include smooth-transition();
+    transform: scale(1.01);
   }
 }
 
-.heading {
-  // @extend .font-family-primary;
-  // @extend .font-weight-bold;
-  // @extend .font-size-xl;
-  // @extend .font-color-dark;
-  // @extend .text-align-center;
+.formSection {
+  width: 42%;
+  padding: 40px 100px;
+
+  background: $background-color;
 }
+
