--- a/client/src/pages/LoginPage/LoginPage.module.scss
+++ b/client/src/pages/LoginPage/LoginPage.module.scss
@@ -10,7 +10,7 @@
 .header {  
   display: flex;
   flex-direction: column;
-  width: 58%;
+  width: 55%;
   padding: 120px 70px 0 70px;
 
   background: $blue-gradient-color;
@@ -81,9 +81,43 @@
 }
 
 .formSection {
-  width: 42%;
-  padding: 40px 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  row-gap: 50px;
+  width: 45%;
+  padding: 40px 90px;
 
   background: $background-color;
 }
 
+.actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.links {
+  display: flex;
+  column-gap: 25px;
+
+  font-weight: 300;
+  font-size: 13px;
+
+  color: $black-color;
+}
+
+.formWrapper {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  row-gap: 30px;
+  width: 80%;
+}
+
+.heading {
+  font-weight: 600;
+  font-size: 24px;
+
+  color: $black-color;
+}
