--- a/client/src/pages/UserPage/UserPage.module.scss
+++ b/client/src/pages/UserPage/UserPage.module.scss
@@ -5,7 +5,8 @@
 .wrapper {
   display: flex;
   justify-content: space-between;
-  margin-top: 35px;
+  margin: 35px 0;
+  padding: 40px 0;
 }
 
 .userInfo {
@@ -13,32 +14,70 @@
   display: flex;
   justify-content: space-between;
   width: 690px;
+
 }
 
 .questionnairePhotoWrapper {
-  position: relative;
-  top: -75px;
-
-  height: 100px;
   width: 220px;
-  background-color: aqua;
+  margin-top: -75px;
+}
+
+.headingH1 {
+  @extend .h1-typography;
+}
+
+.headingH2 {
+  @extend .h2-typography;
 }
 
 .userPhoto {
+  width: 100%;
+  height: 30%;
+  margin-bottom: 15px;
+  object-fit: cover;
   
+  border: 5px solid $white-color;
+  border-radius: 15px;
+}
+
+.questionnaireHeading {
+  margin-top: 40px;
+}
+
+.questionnairesWrapper {
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+  margin-top: 25px;
 }
 
 .questionnaire {
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
 
   &Row {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 30px;
+    width: 100%;
 
+    color: $black-color;
+
+    .subject {
+      font-weight: 500;
+      font-size: 12px;
+    }
+
+    .description {
+      font-weight: 300;
+      font-size: 12px;
+    }
   }
 }
 
 .briefInterestsWrapper {
-  height: 100px;
-  width: 314px;
-  background-color: rgb(0, 255, 123);
+  width: 315px;
 }
 
 .brief {
