--- a/client/src/forms/RegistrationForm/RegistrationForm.module.scss
+++ b/client/src/forms/RegistrationForm/RegistrationForm.module.scss
@@ -1,8 +1,8 @@
 
 .firstStepForm {
   display: grid;
-  grid-template-columns: 2fr 2fr 2fr 2fr;
-  grid-template-rows: 40px 40px 70px 40px 40px;
+  grid-template-columns: repeat(4, 2fr);
+  grid-template-rows: repeat(6, 60px);
   grid-row-gap: 35px;
   grid-column-gap: 20px;
 
@@ -16,8 +16,13 @@
     grid-column: 1/-1;
   }
 
-  &EmailGenderBirthday {
+  &Email {
     grid-row: 3;
+    grid-column: 1/-1;
+  }
+
+  &GenderBirthday {
+    grid-row: 4;
     grid-column: 1/-1;
 
     width: 100%;
@@ -27,12 +32,12 @@
   } 
 
   &Password {
-    grid-row: 4;
+    grid-row: 5;
     grid-column: 1/-1;
   }
 
   &ConfirmPassword {
-    grid-row: 5;
+    grid-row: 6;
     grid-column: 1/-1;
   }
 }
@@ -40,10 +45,10 @@
 .secondStepForm {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 40px 40px 70px 40px 40px;
+  grid-template-rows: repeat(5, 60px);
   grid-row-gap: 35px;
   grid-column-gap: 30px;
-
+  margin-bottom: 15px;
 
   &City {
     grid-row: 1;
@@ -75,4 +80,11 @@
     grid-row: 5;
     grid-column: 1/-1;
   }
+}
+
+.thirdStepForm {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin-bottom: 10px;
 }
