--- a/client/src/forms/RegistrationForm/RegistrationForm.module.scss
+++ b/client/src/forms/RegistrationForm/RegistrationForm.module.scss
@@ -5,6 +5,7 @@
   grid-template-rows: repeat(6, 60px);
   grid-row-gap: 35px;
   grid-column-gap: 20px;
+  margin-bottom: 10px;
 
   &Name {
     grid-row: 1;
