--- a/client/src/pages/UserPage/UserPage.module.scss
+++ b/client/src/pages/UserPage/UserPage.module.scss
@@ -20,20 +20,20 @@
 .questionnairePhotoWrapper {
   width: 220px;
   margin-top: -80px;
-  height: calc(100% - 80px)
+  height: calc(100% - 80px);
 }
 
-.headingH1 {
-  @extend .h1-typography;
-}
+// .headingH1 {
+//   @extend .h1-typography;
+// }
 
-.headingH2 {
-  @extend .h2-typography;
-}
+// .headingH2 {
+//   @extend .h2-typography;
+// }
 
 .userPhoto {
   width: 100%;
-  height: 30%;
+  height: 14rem;
   margin-bottom: 15px;
   object-fit: cover;
   
