--- a/client/src/components/ImagePreview/ImagePreview.module.scss
+++ b/client/src/components/ImagePreview/ImagePreview.module.scss
@@ -33,11 +33,8 @@
 
 .thumbnail {
   &.preview {
-    width: 292px;
-    max-width: 100%;
-
     background: $white-color;
-    border: 1px dashed $dark-gray-color;
+    border: 1px solid $blue-color;
     border-radius: 4px;
     padding: 12px 16px;
 
@@ -130,17 +127,13 @@
   flex-direction: column;
   row-gap: 4px;
 
+  font-size: 13px;
+
   .fileName {
-    // @extend .font-weight-regular;
-    // @extend .font-size-xs;
-    // @extend .line-height-xs;
-    // @extend .font-color-dark;
+    font-weight: 400px;
   }
 
   .fileSize {
-    // @extend .font-weight-regular;
-    // @extend .font-size-3xs;
-    // @extend .line-height-xs;
-    // @extend .font-color-gray-02;
+    font-weight: 300px;
   }
 }
