--- a/client/src/layouts/LoginLayout/LoginLayout.module.scss
+++ b/client/src/layouts/LoginLayout/LoginLayout.module.scss
@@ -84,11 +84,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  row-gap: 50px;
+  row-gap: 80px;
   width: 45%;
   padding: 40px 90px;
 
   background: $background-color;
+  
+  overflow: auto;
 }
 
 .actions {
@@ -111,7 +113,7 @@
   display: flex;
   flex-direction: column;
   align-self: center;
-  row-gap: 30px;
+  row-gap: 40px;
   width: 80%;
 }
 
