--- a/client/src/pages/SearchEventPage/SearchEventPage.module.scss
+++ b/client/src/pages/SearchEventPage/SearchEventPage.module.scss
@@ -15,9 +15,9 @@
   row-gap: 25px;
 }
 
-.userCards {
+.сards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(13rem, 100%), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(24rem, 100%), 1fr));
   grid-gap: 1.2rem;
 
   list-style: none;
