--- a/client/src/pages/UserPage/UserPage.module.scss
+++ b/client/src/pages/UserPage/UserPage.module.scss
@@ -5,7 +5,7 @@
 .userPageSection {
   display: flex;
   justify-content: space-between;
-  padding: 40px 0;
+  padding-top: 40px;
 }
 
 .userInfo {
@@ -22,14 +22,6 @@
   margin-top: -80px;
   height: calc(100% - 80px);
 }
-
-// .headingH1 {
-//   @extend .h1-typography;
-// }
-
-// .headingH2 {
-//   @extend .h2-typography;
-// }
 
 .userPhoto {
   width: 100%;
@@ -79,34 +71,85 @@
 
 .briefInterestsWrapper {
   width: 315px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 50px;
 }
 
 .brief {
+  display: flex;
+  flex-direction: column;
 
+  color: $black-color;
+}
+
+.nicknameCity {
+  display: flex;
+  column-gap: 20px;
+  margin-top: 10px;
 }
 
 .nicknameCityWrapper {
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
 
+  font-weight: 400;
+  font-size: 13px;
 }
 
-.description {
+.welcomeMessage {
+  margin-top: 20px;
 
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 16px;
 }
 
 .interests {
-
+  display: flex;
+  flex-direction: column;
 }
 
 .interestsTags {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 8px;
+  row-gap: 8px;
+  margin-top: 25px;
+}
 
+.interestTag {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px 10px;
+
+  font-weight: 400;
+  font-size: 13px;
+  color: $blue-color;
+
+  border: 1px solid $blue-color;
+  border-radius: 6px;
 }
 
 .matchRate {
+  margin-top: 15px;
 
+  font-weight: 500;
+  font-size: 12px;
+}
+
+.userInvitesSection {
+  width: 240px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
 }
 
 .userInvites {
-  height: 100px;
-  width: 240px;
-  background-color: rgb(255, 251, 0);
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
 }
