--- a/client/src/components/EventCard/EventCard.module.scss
+++ b/client/src/components/EventCard/EventCard.module.scss
@@ -8,30 +8,41 @@
   justify-content: space-between;
   width: 495px;
   padding: 30px;
-
   color: $black-color;
 }
 
 .infoWrapper {
+  flex: 0 1 calc(50% - 10px);
+  max-width: calc(50% - 10px);
   display: flex;
   flex-direction: column;
   row-gap: 20px;
   width: 230px;
 }
 
+.imageWrapper {
+  flex: 0 1 calc(50% - 10px);
+  max-width: calc(50% - 10px);
+}
+
+.imageHolder {
+  height: 100%;
+}
 
 .eventImage {
-  width: 180px;
-  height: 180px;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
   object-fit: cover;
+  vertical-align: bottom;
+  aspect-ratio: 4/3;
 }
 
 .date {
   display: flex;
   column-gap: 8px;
   align-items: center;
-
   font-weight: 400;
   font-size: 13px;
 }
@@ -45,14 +56,12 @@
 .heading {
   font-weight: 600;
   font-size: 16px;
-
   @include multiline-ellipsis(2);
 }
 
 .description {
   font-weight: 300;
   font-size: 13px;
-
   @include multiline-ellipsis(4);
 }
 
@@ -66,7 +75,6 @@
     border-radius: 50%;
     border: 2px solid $white-color;
     margin-left: -16px;
-
     object-fit: cover;
   }
 }
@@ -75,14 +83,11 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
-
   display: flex;
   justify-content: center;
   align-items: center;
   margin-left: -16px;
-
   background: $blue-gradient-color;
-
   font-weight: 400;
   font-size: 11px;
   color: $white-color;
