Store time as plain text (not ISO). Format invite date depending on date and time

--- a/client/src/components/InputField/InputField.module.scss
+++ b/client/src/components/InputField/InputField.module.scss
@@ -39,6 +39,15 @@
   }
 }
 
+input.inputDisabled {
+  border: 1px solid $dark-gray-color;
+
+  &:hover {
+    border: 1px solid $dark-gray-color;
+    box-shadow: none;
+  }
+}
+
 .error {
   border: 1px solid $red-color;
 }
