--- a/client/src/components/InviteCard/InviteCard.module.scss
+++ b/client/src/components/InviteCard/InviteCard.module.scss
@@ -3,13 +3,15 @@
 @import '~style/mixins';
 
 .card {
+  height: 92%;
   position: relative;
 
   @include base-wrapper();
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 20px;
+  justify-content: space-between;
+  row-gap: 25px;
   max-width: 240px;
   width: 100%;
   padding: 170px 25px 25px;
@@ -64,13 +66,15 @@
   font-family: $primary-font-family;
   font-weight: 400;
   font-size: 11px;
+  line-height: 4px;
 
   color: $black-color;
 }
 
 .heading {
+  @include multiline-ellipsis(2);
   @extend .h3-typography;
-  margin-bottom: 7px;
+  margin-bottom: 6px;
 }
 
 .blue {
@@ -78,6 +82,8 @@
 }
 
 .description {
+  display: flex;
+  flex-grow: 1;
   font-family: $primary-font-family;
   font-weight: 400;
   font-size: 11px;
