--- a/client/src/pages/SearchInvitePage/SearchInvitePage.module.scss
+++ b/client/src/pages/SearchInvitePage/SearchInvitePage.module.scss
@@ -18,7 +18,8 @@
 .userCards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(13rem, 100%), 1fr));
-  grid-gap: 1.2rem;
+  grid-column-gap: 1.2rem;
+  grid-row-gap: 1.9rem;
 
   list-style: none;
 }
