--- a/client/src/pages/ForbiddenPage/ForbiddenPage.module.scss
+++ b/client/src/pages/ForbiddenPage/ForbiddenPage.module.scss
@@ -2,6 +2,13 @@
 @import '~style/typography';
 @import '~style/mixins';
 
+.container {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .wrapper {
   @include base-wrapper();
   display: flex;
@@ -9,6 +16,8 @@
   justify-content: center; 
   align-items: center;
   row-gap: 50px;
+  height: 80vh;
+  width: 70%;
 }
 
 .numbers {
