--- a/client/src/pages/ForbiddenPage/ForbiddenPage.module.scss
+++ b/client/src/pages/ForbiddenPage/ForbiddenPage.module.scss
@@ -15,9 +15,16 @@
   flex-direction: column;
   justify-content: center; 
   align-items: center;
-  row-gap: 50px;
+  row-gap: 40px;
   height: 80vh;
   width: 70%;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 80px;
 }
 
 .numbers {
