--- a/client/src/components/InviteTabs/InviteTabs.module.scss
+++ b/client/src/components/InviteTabs/InviteTabs.module.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     row-gap: 45px;
     background-color: $white-color;
-    padding: 40px;
+    padding-top: 35px;
     padding-bottom: 0;
   }
 
@@ -26,14 +26,10 @@
   justify-content: center;
   padding-bottom: 15px;
 
-  // @extend .font-family-primary;
-  // @extend .font-weight-regular;
-  // @extend .font-size-s;
-  // @extend .line-height-s;
-  // @extend .font-color-gray-02;
+  font-weight: 400;
+  font-size: 15px;
 
   &.active {
-    // @extend .font-weight-medium;
-    // @extend .font-color-dark;
+    font-weight: 500;
   }
 }
