--- a/client/src/components/InviteTabs/components/ClosedInvites/components/ClosedInviteCard/ClosedInviteCard.module.scss
+++ b/client/src/components/InviteTabs/components/ClosedInvites/components/ClosedInviteCard/ClosedInviteCard.module.scss
@@ -8,41 +8,59 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 20px;
-    min-height: 250px;
-    max-height: 3000px;
-}
+    width: 100%;
+    padding: 30px;
 
-.top {
-    display: flex;
-    justify-content: space-between;
-    height: 80%;
+    gap: 15px;
 }
 
 .info {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    width: 100%;
+    gap: 20px;
 }
 
-.companions {
+.responseInfo {
     display: flex;
     flex-direction: column;
-    gap: 15px;
-    padding-left: 20px;
-    border-left: 2px solid $light-gray-color;
+    gap: 5px;
+}
 
-    &Users {
+.inviters {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 100%;
+
+    padding: 5px 0px;
+
+    max-height: 108px;
+    overflow-y: auto;
+
+    &Label {
+        font-size: 12px;
+        font-weight: 400;
+    }
+
+    &Block {
         display: flex;
         flex-direction: column;
-        max-height: 120px;
-        overflow-y: auto;
-        padding: 10px 0;
         gap: 10px;
+        width: 100%;
+    }
+
+    button {
+        width :100%;
     }
 }
 
-.companion {
+.companionsInfo {
+    font-size: 13px;
+    font-weight: 400;
+}
+
+.creator {
     display: flex;
     gap: 11px;
     align-items: center;
@@ -59,34 +77,38 @@
     }
 }
 
-.actions {
-    width: 100%;
-    height: 30%;
+.headingInfo {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
-.subject {
-    font-weight: 600;
+.companionsInfo {
+    font-size: 11px;
+    font-weight: 400;
 }
 
 .date {
     display: flex;
-    gap: 10px;
+    gap: 7px;
     align-items: center;
-    font-size: 14px;
+    font-size: 11px;
+    font-weight: 400;
+    margin-bottom: 12px;
 }
 
-.blue {
-    color: $blue-color;
-}
-
-.cross {
-    cursor: pointer;
-    color: $red-color;
-    width: 10px;
-}
-
-
-.companionsInfo {
+.subject {
+    font-weight: 600;
     font-size: 13px;
-    font-weight: 300;
+}
+
+.button {
+    margin-top: 10px;
+}
+
+.a {
+    display: flex;
+    flex-direction: column;
+
+    gap: 15px;
 }
