--- a/client/src/components/InviteTabs/components/UserResponses/components/InviteEventResponseCard/InviteEventResponseCard.module.scss
+++ b/client/src/components/InviteTabs/components/UserResponses/components/InviteEventResponseCard/InviteEventResponseCard.module.scss
@@ -40,7 +40,8 @@
     max-height: 150px;
 
     &Label {
-        font-size: 13px;
+        font-size: 12px;
+        font-weight: 400;
     }
 
     &Block {
@@ -77,18 +78,27 @@
     }
 }
 
-.subject {
-    font-weight: 600;
-    font-size: 14px;
+.headingInfo {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.companionsInfo {
+    font-size: 11px;
+    font-weight: 400;
 }
 
 .date {
     display: flex;
-    gap: 10px;
+    gap: 7px;
     align-items: center;
-    font-size: 12px;
+    font-size: 11px;
+    font-weight: 400;
+    margin-bottom: 12px;
 }
 
-.blue {
-    color: $blue-color;
+.subject {
+    font-weight: 600;
+    font-size: 13px;
 }
