--- a/client/src/components/InviteTabs/components/UserResponses/components/InviteResponseCard/InviteResponseCard.module.scss
+++ b/client/src/components/InviteTabs/components/UserResponses/components/InviteResponseCard/InviteResponseCard.module.scss
@@ -13,8 +13,8 @@
     padding: 30px;
 
     gap: 20px;
-    min-height: 100px;
-    max-height: 250px;
+    // min-height: 100px;
+    // max-height: 250px;
 }
 
 .info {
@@ -39,44 +39,53 @@
     width: 100%;
 
     button {
-        width :100%;
+        width: 100%;
     }
 }
 
 .companionsInfo {
-    font-size: 13px;
+    font-size: 11px;
     font-weight: 400;
 }
 
 .creator {
     display: flex;
-    gap: 11px;
+    gap: 8px;
     align-items: center;
 
     &Image {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
         border-radius: 50px;
     }
 
     &Info {
-        font-weight: 300;
-        font-size: 13px;
+        font-weight: 400;
+        font-size: 12px;
     }
 }
 
-.subject {
-    font-weight: 600;
-    font-size: 14px;
+.headingInfo {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+
+.companionsInfo {
+    font-size: 11px;
+    font-weight: 400;
 }
 
 .date {
     display: flex;
-    gap: 10px;
+    gap: 7px;
     align-items: center;
-    font-size: 12px;
+    font-size: 11px;
+    font-weight: 400;
+    margin-bottom: 12px;
 }
 
-.blue {
-    color: $blue-color;
+.subject {
+    font-weight: 600;
+    font-size: 13px;
 }
