--- a/client/src/pages/UserPage/UserPage.module.scss
+++ b/client/src/pages/UserPage/UserPage.module.scss
@@ -14,27 +14,97 @@
   justify-content: space-between;
   width: 690px;
   height: calc(100% - 80px);
-
 }
 
-.questionnairePhotoWrapper {
+.briefWrapper {
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
   width: 220px;
-  margin-top: -80px;
   height: calc(100% - 80px);
+  margin-top: -80px;
 }
 
 .userPhoto {
   width: 100%;
   height: 14rem;
-  margin-bottom: 15px;
   object-fit: cover;
   
   border: 5px solid $white-color;
   border-radius: 15px;
 }
 
-.questionnaireHeading {
-  margin-top: 40px;
+.brief {
+  display: flex;
+  flex-direction: column;
+
+  color: $black-color;
+}
+
+.nicknameCity {
+  display: flex;
+  column-gap: 20px;
+  margin-top: 10px;
+}
+
+.nicknameCityWrapper {
+  display: flex;
+  align-items: center;
+  column-gap: 6px;
+
+  font-weight: 400;
+  font-size: 13px;
+}
+
+.welcomeMessage {
+  margin-top: 20px;
+
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 17px;
+}
+
+
+
+.questionnaireInterestsWrapper {
+  width: 310px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 50px;
+}
+
+.questionnaireSection {
+  display: flex;
+  flex-direction: column;
+}
+
+.interestsTags {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 8px;
+  row-gap: 8px;
+  margin-top: 25px;
+}
+
+.interestTag {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px 10px;
+
+  font-weight: 400;
+  font-size: 12px;
+  color: $blue-color;
+
+  border: 1px solid $blue-color;
+  border-radius: 6px;
+}
+
+.matchRate {
+  margin-top: 15px;
+
+  font-weight: 500;
+  font-size: 12px;
 }
 
 .questionnairesWrapper {
@@ -69,75 +139,12 @@
   }
 }
 
-.briefInterestsWrapper {
-  width: 315px;
-  display: flex;
-  flex-direction: column;
-  row-gap: 50px;
-}
-
-.brief {
-  display: flex;
-  flex-direction: column;
-
-  color: $black-color;
-}
-
-.nicknameCity {
-  display: flex;
-  column-gap: 20px;
-  margin-top: 10px;
-}
-
-.nicknameCityWrapper {
-  display: flex;
-  align-items: center;
-  column-gap: 8px;
-
-  font-weight: 400;
-  font-size: 13px;
-}
-
-.welcomeMessage {
-  margin-top: 20px;
-
-  font-weight: 300;
-  font-size: 12px;
-  line-height: 16px;
-}
-
-.interests {
-  display: flex;
-  flex-direction: column;
-}
-
-.interestsTags {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 8px;
-  row-gap: 8px;
-  margin-top: 25px;
-}
-
-.interestTag {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 4px 10px;
-
-  font-weight: 400;
-  font-size: 13px;
-  color: $blue-color;
-
-  border: 1px solid $blue-color;
-  border-radius: 6px;
-}
-
-.matchRate {
-  margin-top: 15px;
-
+.currentInvitesHeading {
+  @include base-wrapper();
+  padding: 15px;
+  text-align: center;
   font-weight: 500;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .userInvitesSection {
@@ -152,4 +159,6 @@
   display: flex;
   flex-direction: column;
   row-gap: 15px;
+  height: calc(100vh - 180px);
+  overflow-y: auto;
 }
