--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -11,6 +11,25 @@
   font-family: $primary-font-family;
 }
 
+::-webkit-scrollbar {
+  width: 14px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 14px 14px transparent;
+  border: solid 5px transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 14px 14px #ccccce;
+  border: solid 5px transparent;
+  border-radius: 14px;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
+
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0;
@@ -31,6 +50,10 @@ body {
 
 .blue {
   color: $blue-color;
+}
+
+.amount {
+  font-weight: 300;
 }
 
 .heading-H1 {
