--- a/client/src/components/InviteTabs/components/ClosedInvites/components/ClosedInviteCard/ClosedInviteCard.module.scss
+++ b/client/src/components/InviteTabs/components/ClosedInvites/components/ClosedInviteCard/ClosedInviteCard.module.scss
@@ -60,6 +60,11 @@
     font-weight: 400;
 }
 
+.companionsInfo {
+    font-size: 11px;
+    font-weight: 400;
+}
+
 .creator {
     display: flex;
     gap: 11px;
