--- a/client/src/components/IconButton/IconButton.module.scss
+++ b/client/src/components/IconButton/IconButton.module.scss
@@ -9,6 +9,8 @@
     justify-content: center;
     height: 40px;
     width: 40px;
+    min-height: 40px;
+    min-width: 40px;
 
     border-radius: 10px;
 
@@ -17,7 +19,7 @@
 }
 
 .default {
-    border: 2px solid $blue-color;
+    border: 1px solid $blue-color;
 
     &:hover {
         background-color: $blue-color;
@@ -29,7 +31,7 @@
 }
 
 .green {
-    border: 2px solid $green-color;
+    border: 1px solid $green-color;
 
     &:hover {
         background-color: $green-color;
@@ -41,7 +43,7 @@
 }
 
 .red {
-    border: 2px solid $red-color;
+    border: 1px solid $red-color;
 
     &:hover {
         background-color: $red-color;
