--- a/client/src/components/Notification/Notification.module.scss
+++ b/client/src/components/Notification/Notification.module.scss
@@ -14,7 +14,7 @@
   padding: 20px 35px 20px 25px;
 
   background: $white-color;
-  border-bottom: 4px solid;
+  border-bottom: 4px solid $blue-color;
   border-radius: 4px;
   
   // &.success {
@@ -64,4 +64,6 @@
 
   width: 12px;
   height: 12px;
+
+  cursor: pointer;
 }
