--- a/client/src/style/_variables.scss
+++ b/client/src/style/_variables.scss
@@ -3,6 +3,8 @@
 $app-container-max-width: 1020px;
 $nav-container-max-width: 240px;
 
+$medium-screen-bp: 1000px;
+
 $primary-font-family: 'Manrope', sans-serif;
 
 $outer-shadow: 0px 3px 8px $outer-shadow-color;
