--- a/client/src/pages/SearchInvitePage/SearchInvitePage.module.scss
+++ b/client/src/pages/SearchInvitePage/SearchInvitePage.module.scss
@@ -6,6 +6,10 @@
   display: flex;
   flex-direction: column;
   row-gap: 40px;
+
+  @media screen and (max-width: $medium-screen-bp) {
+    margin: 0 30px;
+  }
 }
 
 .searchForm {
