--- a/client/src/style/_variables.scss
+++ b/client/src/style/_variables.scss
@@ -3,7 +3,11 @@
 $app-container-max-width: 1020px;
 $nav-container-max-width: 240px;
 
-$medium-screen-bp: 1000px;
+$tabs-container-min-width: 620px;
+
+$large-screen-bp: 1260px;
+$medium-screen-bp: 860px;
+$small-screen-bp: 495px;
 
 $primary-font-family: 'Manrope', sans-serif;
 
