--- a/client/src/components/InviteTabs/components/CreatedInvites/components/CreatedInviteCard/CreatedInviteCard.module.scss
+++ b/client/src/components/InviteTabs/components/CreatedInvites/components/CreatedInviteCard/CreatedInviteCard.module.scss
@@ -8,6 +8,11 @@
     display: flex;
     justify-content: space-between;
     gap: 50px;
+
+    @media screen and (max-width: $large-screen-bp) {
+        flex-direction: column;
+        row-gap: 30px;
+    }
 }
 
 .info {
@@ -15,6 +20,14 @@
     flex-direction: column;
     row-gap: 25px;
     width: 28%;
+    flex-wrap: wrap;
+    column-gap: 30px;
+
+    @media screen and (max-width: $large-screen-bp) {
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 
 .subject {
@@ -47,6 +60,35 @@
     justify-content: space-between;
     align-items: center;
     gap: 10px;
+
+    @media screen and (max-width: $large-screen-bp) {
+        flex-direction: column;
+        row-gap: 15px;
+        justify-content: flex-start;
+        align-self: center;
+    }
+
+    @media screen and (max-width: 1067px) {
+        display: none;
+    }
+}
+
+.a {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
+.actionsSmallBp {
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+
+    @media screen and (max-width: 1067px) {
+        display: flex;
+    }
+
 }
 
 .noResponses {
@@ -59,6 +101,7 @@
     border-radius: 12px;
     width: 100%;
     height: 100%;
+    min-height: 60px;
 }
 
 .responses {
@@ -70,6 +113,10 @@
 
     font-size: 15px;
     font-weight: 500;
+
+    @media screen and (max-width: $large-screen-bp) {
+        width: 100%;
+    }
 }
 
 .response {
