--- a/client/src/components/Navbar/Navbar.module.scss
+++ b/client/src/components/Navbar/Navbar.module.scss
@@ -7,6 +7,8 @@
   position: sticky;
   top: 30px;
 
+  z-index: 2;
+
   @include base-wrapper();
   display: flex;
   flex-direction: column;
@@ -39,7 +41,24 @@
   overflow-wrap: anywhere;
 
   @media screen and (max-width: $medium-screen-bp) {
-    width: 180px;
+    display: none;
+  }
+}
+
+.userProfileSmall {
+  @include base-wrapper();
+  display: none;
+  align-items: center;
+  column-gap: 12px;
+  width: 100%;
+
+  padding: 10px;
+  margin-top: 10px;
+
+  overflow-wrap: anywhere;
+
+  @media screen and (max-width: $medium-screen-bp) {
+    display: flex;
   }
 }
 
@@ -102,7 +121,17 @@
   }
 
   @media screen and (max-width: $medium-screen-bp) {
+    position: absolute;
+    top: 70px;
+    right: 0px;
+
+    @include base-wrapper();
     display: none;
+    width: 260px;
+    
+    &.visible {
+      display: flex; 
+    }
   }
 }
 
@@ -126,13 +155,12 @@
   }
 }
 
-.a {
-  display: flex;
+.actionsWrapper {
+  display: none;
+  column-gap: 35px;
   align-items: center;
-  column-gap: 30px;
-  width: 100%;
 
   @media screen and (max-width: $medium-screen-bp) {
-    width: auto;
+    display: flex;
   }
 }
