--- a/client/src/components/EventCard/EventCard.module.scss
+++ b/client/src/components/EventCard/EventCard.module.scss
@@ -8,7 +8,7 @@
   justify-content: space-between;
   width: 495px;
   height: 240px;
-  padding: 25px 30px 25px 35px;
+  padding: 25px 30px;
   color: $black-color;
 }
 
