--- a/client/src/forms/SearchInviteForm/SearchInviteForm.module.scss
+++ b/client/src/forms/SearchInviteForm/SearchInviteForm.module.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  column-gap: 45px;
+  justify-content: space-between;
+  column-gap: 40px;
   row-gap: 20px;
 }
 
@@ -17,12 +18,13 @@
 .multiselects {
   display: flex;
   align-items: center;
-  column-gap: 10px;
+  column-gap: 12px;
   flex-wrap: wrap;
   row-gap: 10px;
 
-  [class*=Select] {
-    width: 210px;
+  [class*=Select],
+  [class*=InputField] {
+    width: 170px;
   }
 }
 
@@ -33,6 +35,6 @@
 .actions {
   display: flex;
   align-items: center;
-  column-gap: 10px;
+  column-gap: 8px;
 }
 
