Add links to users profiles

--- a/client/src/modals/CreateEventInviteModal/CreateEventInviteModal.module.scss
+++ b/client/src/modals/CreateEventInviteModal/CreateEventInviteModal.module.scss
@@ -20,7 +20,8 @@
 .eventInfo {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 10px;
+  font-size: 14px;
   
   &Row {
     display: flex;
