--- a/client/src/components/InviteTabs/components/ClosedInvites/components/ClosedInviteCard/ClosedInviteCard.module.scss
+++ b/client/src/components/InviteTabs/components/ClosedInvites/components/ClosedInviteCard/ClosedInviteCard.module.scss
@@ -14,6 +14,12 @@
     gap: 15px;
 }
 
+.actionsWrapper{
+    display: flex;
+    flex-direction: column;
+    row-gap: 0px;
+}
+
 .info {
     display: flex;
     flex-direction: column;
